--- a/matMul/concurrent/pom.xml
+++ b/matMul/concurrent/pom.xml
@@ -77,7 +77,7 @@
       <configuration>
         <archive>
           <manifest>
-            <mainClass>com.dcu.App</mainClass>
+            <mainClass>com.dcu.StrassenMatrixMultiplication</mainClass>
           </manifest>
         </archive>
       </configuration>
